// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a AffixInput 1`] = `
<div
  className="affixInput"
>
  Foogrgrgrgrg
</div>
`;

exports[`renders a loud AffixInput 1`] = `
<div
  className="affixInput bold"
>
  Foo
</div>
`;
